# stepup-reprep

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  README.md  devenv.nix  mkdocs.yaml  mkdocs.yml  pyproject.toml  versions.json
.github/: requirements-old.txt
.github/workflows/: mkdocs.yaml  pytest.yaml  release.yaml
2.0/: objects.inv
2.0.2/development/: index.html
2.0.2/installation/: index.html
2.0.2/license/: index.html
2.0.2/reference/stepup.reprep.api/: index.html
2.0.2/search/: search_index.json
2.0/advanced_topics/archive_git/: index.html
2.0/advanced_topics/good_practices/: index.html
2.0/advanced_topics/sync_zenodo/: index.html
2.0/advanced_topics/tile_pdfs/: index.html
2.0/advanced_topics/unplot/: plot.json
2.0/changelog/: index.html
2.0/from_scratch/introduction/: index.html
2.1/: index.html  objects.inv
2.1/advanced_topics/unplot/: stdout.txt
2.1/changelog/: index.html
2.1/reference/stepup.reprep.api/: index.html
2.1/search/: search_index.json
2.2/: 404.html
2.2/advanced_topics/archive_git/: index.html
2.2/advanced_topics/inventory_files/: index.html
2.2/advanced_topics/sync_zenodo/: index.html
2.2/advanced_topics/unplot/: index.html
2.2/changelog/: index.html
2.2/development/: index.html
2.2/from_template/create_or_clone_a_project/: index.html
2.2/reference/stepup.reprep.api/: index.html
2.2/reference/stepup.reprep.tile_pdf/: index.html
2.2/search/: search_index.json
2.3/: 404.html  index.html  objects.inv
2.3/advanced_topics/archive_git/: index.html
2.3/advanced_topics/bibsane/: index.html
2.3/advanced_topics/good_practices/: index.html
2.3/advanced_topics/inventory_files/: index.html
2.3/advanced_topics/sync_zenodo/: index.html
2.3/advanced_topics/tile_pdfs/: index.html
2.3/advanced_topics/unplot/: index.html
2.3/changelog/: index.html
2.3/development/: index.html
2.3/from_scratch/introduction/: index.html
2.3/from_template/before_you_begin/: index.html
2.3/from_template/create_or_clone_a_project/: index.html
2.3/from_template/working_on_a_project/: index.html
2.3/installation/: index.html
2.3/license/: index.html
2.3/reference/stepup.reprep.api/: index.html
2.3/reference/stepup.reprep.bibsane/: index.html
2.3/reference/stepup.reprep.tile_pdf/: index.html
2.3/search/: search_index.json
3.0/: 404.html  index.html
3.0/advanced_topics/archive_git/: index.html
3.0/advanced_topics/bibsane/: index.html
3.0/advanced_topics/good_practices/: index.html
3.0/advanced_topics/sync_zenodo/: index.html
3.0/advanced_topics/tile_pdfs/: index.html
3.0/advanced_topics/unplot/: index.html
3.0/changelog/: index.html
3.0/development/: index.html
3.0/from_scratch/introduction/: index.html
3.0/from_template/before_you_begin/: index.html
3.0/from_template/create_or_clone_a_project/: index.html
3.0/from_template/introduction/: index.html
3.0/reference/stepup.reprep.api/: index.html
3.0/reference/stepup.reprep.tile_pdf/: index.html
3.0/search/: search_index.json
3.1/: 404.html  index.html  objects.inv
3.1/advanced_topics/archive_git/: index.html
3.1/advanced_topics/bibsane/: index.html
3.1/advanced_topics/good_practices/: index.html
3.1/advanced_topics/inventory_files/: index.html
3.1/advanced_topics/sync_zenodo/: index.html
3.1/advanced_topics/tile_pdfs/: index.html
3.1/advanced_topics/unplot/: index.html
3.1/changelog/: index.html
3.1/development/: index.html
3.1/from_scratch/introduction/: index.html
3.1/from_template/before_you_begin/: index.html
3.1/from_template/create_or_clone_a_project/: index.html
3.1/from_template/introduction/: index.html
3.1/from_template/working_on_a_project/: index.html
3.1/installation/: index.html
3.1/license/: index.html
3.1/reference/stepup.reprep.api/: index.html
3.1/reference/stepup.reprep.bibsane/: index.html
3.1/reference/stepup.reprep.tile_pdf/: index.html
3.1/search/: search_index.json
dev/: 404.html  index.html  objects.inv
dev/advanced_topics/archive_git/: index.html
dev/advanced_topics/bibsane/: index.html
dev/changelog/: index.html
dev/development/: index.html
dev/installation/: index.html
dev/license/: index.html
dev/search/: search_index.json
docs/: changelog.md  development.md  index.md  installation.md  license.md  plan.py
docs/advanced_topics/: archive_git.md  bibsane.md  good_practices.md  inventory_files.md  manifest_files.md  share_zenodo.md  sync_zenodo.md  tile_pdfs.md  tiling_pdfs.md  unplot.md
docs/from_scratch/: introduction.md
docs/from_template/: before_you_begin.md  create_or_clone_a_project.md  introduction.md  working_on_a_project.md
docs/reference/: stepup.reprep.api.md  stepup.reprep.bibsane.md  stepup.reprep.tile_pdf.md
docs/tutorials/: before_you_begin.md  create_or_clone_a_project.md  initialize_project.md  manifest_files.md  template_conventions.md  tiling_pdfs.md  usage.md
stepup/reprep/: __init__.py  actions.py  add_notes_pdf.py  api.py  bibparser.py  bibsane.py  bibtex.lark  bibtex_log.py  cat_pdf.py  check_hrefs.py  check_inventory.py  check_manifest.py  compile_latex.py  compile_tectonic.py  compile_typst.py  convert_inkscape.py  convert_jupyter.py  convert_markdown.py  convert_weasyprint.py  execute_papermill.py  flatten_latex.py  inventory.py  latex.py  latex_deps.py  latex_flat.py  latex_log.py  make_inventory.py  make_manifest.py  normalize_pdf.py  nup_pdf.py  pytest.py  raster_pdf.py  render.py  render_jinja.py  share_zenodo.py  sync_zenodo.py  tile_pdf.py  unplot.py  wrap_git.py  zip_inventory.py  (+1 more)
tests/: conftest.py  reprep_common.py  test_bibparser.py  test_bibsane.py  test_bibtex_log.py  test_cases.py  test_convert_markdown.py  test_examples.py  test_flatten_latex.py  test_inventory.py  test_latex_deps.py  test_latex_flat.py  test_latex_log.py  test_manifest.py  test_render.py  test_render_jinja.py  test_share_zenodo.py  test_sync_zenodo.py  test_unplot.py  test_zip.py
tests/bibsane/: .gitignore
tests/cases/cat_pdf/: main.sh  (+5 more)
tests/examples/: README.md
(+775 files in other folders)
