[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stepup-reprep"
authors = [
  { name="Toon Verstraelen", email="toon.verstraelen@ugent.be" },
]
description = "StepUp RepRep is the StepUp extension for Reproducible Reporting"
readme = "README.md"
license = {file = "COPYING"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Education :: Computer Aided Instruction (CAI)",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    # Ensure changes to these dependencies are reflected in .github/requirements-old.txt
    "attrs>=23.1.0",
    "bibtexparser>=1.4.1",
    "cattrs>=23.2.3",
    "defusedxml>=0.7.0",
    "ipykernel>=6.20.1",
    "jinja2>=3.1.6",
    "markdown>=3.6",
    "nbconvert>=7.1.0",
    "numpy>=1.24.3",
    "path>=16.14.0",
    "pyiso4>=0.1.6",
    "pymupdf>=1.23.7",
    "pyyaml>=6.0",
    "requests>=2.32.3",
    "scipy>=1.11.1",
    "semver>=3.0.0",
    "stepup>=2.1.4,<3.0.0",
    "svg.path>=6.0",
    "weasyprint>=62.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "psutil",
    "pytest",
    "pytest-asyncio>=0.24",
    "pytest-xdist",
    "matplotlib",
    "mike",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-macros-plugin",
    "mkdocs-material",
]

[project.urls]
Documentation = "https://reproducible-reporting.github.io/stepup-reprep/"
Issues = "https://github.com/reproducible-reporting/stepup-reprep/issues"
Source = "https://github.com/reproducible-reporting/stepup-reprep/"
Changelog = "https://reproducible-reporting.github.io/stepup-reprep/changelog/"

[project.scripts]
rr-add-notes-pdf = "stepup.reprep.add_notes_pdf:main"
rr-cat-pdf = "stepup.reprep.cat_pdf:main"
rr-check-hrefs = "stepup.reprep.check_hrefs:main"
rr-check-inventory = "stepup.reprep.check_inventory:main"
rr-compile-latex = "stepup.reprep.compile_latex:main"
rr-compile-typst = "stepup.reprep.compile_typst:main"
rr-convert-inkscape = "stepup.reprep.convert_inkscape:main"
rr-convert-markdown = "stepup.reprep.convert_markdown:main"
rr-convert-weasyprint = "stepup.reprep.convert_weasyprint:main"
rr-flatten-latex = "stepup.reprep.flatten_latex:main"
rr-make-inventory = "stepup.reprep.make_inventory:main"
rr-normalize-pdf = "stepup.reprep.normalize_pdf:main"
rr-nup-pdf = "stepup.reprep.nup_pdf:main"
rr-raster-pdf = "stepup.reprep.raster_pdf:main"
rr-render-jinja = "stepup.reprep.render_jinja:main"
rr-bibsane = "stepup.reprep.bibsane:main"
rr-sync-zenodo = "stepup.reprep.sync_zenodo:main"
rr-unplot = "stepup.reprep.unplot:main"
rr-zip-inventory = "stepup.reprep.zip_inventory:main"

[tool.pytest.ini_options]
addopts = "-n auto -W error --strict-markers -m 'not heavy'"
markers = ["heavy: requires CPU or memory resources not available in GitHub Actions"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "A", "B", "BLE", "C4", "E", "EXE", "F", "I", "ICN", "ISC", "N", "NPY", "PERF", "PIE", "PL",
    "PT", "PYI", "RET", "RSE", "RUF", "SIM", "TRY", "UP", "W"
]
ignore = [
    "PLR0904",  # https://docs.astral.sh/ruff/rules/too-many-public-methods/
    "PLR0911",  # https://docs.astral.sh/ruff/rules/too-many-return-statements/
    "PLR0912",  # https://docs.astral.sh/ruff/rules/too-many-branches/
    "PLR0913",  # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "PLR0914",  # https://docs.astral.sh/ruff/rules/too-many-locals/
    "PLR0915",  # https://docs.astral.sh/ruff/rules/too-many-statements/
    "PLR0916",  # https://docs.astral.sh/ruff/rules/too-many-boolean-expressions/
    "PLR0917",  # https://docs.astral.sh/ruff/rules/too-many-positional/
    "PLR2004",  # https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "PLW2901",  # https://docs.astral.sh/ruff/rules/redefined-loop-name/
    "PT011",  # https://docs.astral.sh/ruff/rules/pytest-raises-too-broad/
    "RET503",  # https://docs.astral.sh/ruff/rules/implicit-return/
    "RUF003",  # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-comment/
    "TRY003",  # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "TRY300",  # https://docs.astral.sh/ruff/rules/try-consider-else/
    "TRY301",  # https://docs.astral.sh/ruff/rules/raise-within-try/
]

[tool.setuptools]
packages = ["stepup.reprep"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
