[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stepup-reprep"
authors = [
  { name="Toon Verstraelen", email="toon.verstraelen@ugent.be" },
]
description = "StepUp RepRep is the StepUp extension for Reproducible Reporting"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Education :: Computer Aided Instruction (CAI)",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    # Ensure changes to these dependencies are reflected in .github/requirements-old.txt
    "attrs>=23.1.0",
    "cattrs>=23.2.3",
    "defusedxml>=0.7.0",
    "idutils>=1.4.5",
    "ipykernel>=6.20.1",
    "lark>=1.3.1",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.2",
    "nbconvert>=7.17.1",
    "numpy>=1.24.3",
    "papermill>=2.6.0",
    "path>=16.14.0",
    "pyiso4>=0.1.6",
    "pymupdf>=1.23.7",
    "pyyaml>=6.0",
    "requests>=2.33.0",
    "scipy>=1.11.1",
    "semver>=3.0.0",
    "stepup>=4.0.0rc4,<5.0.0a1",
    "svg.path>=6.0",
    "weasyprint>=68.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "psutil",
    "pytest",
    "pytest-asyncio>=0.24",
    "pytest-xdist",
    "matplotlib",
    "mike",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-macros-plugin",
    "mkdocs-material",
]

[project.urls]
Documentation = "https://reproducible-reporting.github.io/stepup-reprep/"
Issues = "https://github.com/reproducible-reporting/stepup-reprep/issues"
Source = "https://github.com/reproducible-reporting/stepup-reprep/"
Changelog = "https://reproducible-reporting.github.io/stepup-reprep/changelog/"

[project.scripts]
srr-add-notes-pdf = "stepup.reprep.add_notes_pdf:main"
srr-bibsane = "stepup.reprep.bibsane:main"
srr-cat-pdf = "stepup.reprep.cat_pdf:main"
srr-check-hrefs = "stepup.reprep.check_hrefs:main"
srr-check-inventory = "stepup.reprep.check_inventory:main"
srr-compile-latex = "stepup.reprep.compile_latex:main"
srr-compile-tectonic = "stepup.reprep.compile_tectonic:main"
srr-compile-typst = "stepup.reprep.compile_typst:main"
srr-convert-inkscape = "stepup.reprep.convert_inkscape:main"
srr-convert-markdown = "stepup.reprep.convert_markdown:main"
srr-convert-weasyprint = "stepup.reprep.convert_weasyprint:main"
srr-execute-papermill = "stepup.reprep.execute_papermill:main"
srr-flatten-latex = "stepup.reprep.flatten_latex:main"
srr-make-inventory = "stepup.reprep.make_inventory:main"
srr-normalize-pdf = "stepup.reprep.normalize_pdf:main"
srr-nup-pdf = "stepup.reprep.nup_pdf:main"
srr-raster-pdf = "stepup.reprep.raster_pdf:main"
srr-sync-zenodo = "stepup.reprep.sync_zenodo:main"
srr-unplot = "stepup.reprep.unplot:main"
srr-wrap-git = "stepup.reprep.wrap_git:main"
srr-zip-inventory = "stepup.reprep.zip_inventory:main"

[tool.pytest.ini_options]
addopts = "-n auto --dist worksteal --strict-markers -m 'not heavy'"
markers = ["heavy: requires CPU or memory resources not available in GitHub Actions"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    "ignore:.*idutils.*:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "A", "B", "BLE", "C4", "E", "EXE", "F", "I", "ICN", "ISC", "N", "NPY", "PERF", "PIE", "PL",
    "PT", "PYI", "RET", "RSE", "RUF", "SIM", "TRY", "UP", "W"
]
ignore = [
    "PLR0904",  # https://docs.astral.sh/ruff/rules/too-many-public-methods/
    "PLR0911",  # https://docs.astral.sh/ruff/rules/too-many-return-statements/
    "PLR0912",  # https://docs.astral.sh/ruff/rules/too-many-branches/
    "PLR0913",  # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "PLR0914",  # https://docs.astral.sh/ruff/rules/too-many-locals/
    "PLR0915",  # https://docs.astral.sh/ruff/rules/too-many-statements/
    "PLR0916",  # https://docs.astral.sh/ruff/rules/too-many-boolean-expressions/
    "PLR0917",  # https://docs.astral.sh/ruff/rules/too-many-positional/
    "PLR2004",  # https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "PLW2901",  # https://docs.astral.sh/ruff/rules/redefined-loop-name/
    "PT011",  # https://docs.astral.sh/ruff/rules/pytest-raises-too-broad/
    "RET503",  # https://docs.astral.sh/ruff/rules/implicit-return/
    "RUF003",  # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-comment/
    "TRY003",  # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "TRY300",  # https://docs.astral.sh/ruff/rules/try-consider-else/
    "TRY301",  # https://docs.astral.sh/ruff/rules/raise-within-try/
]

[tool.ruff.lint.isort]
known-first-party = ["stepup"]

[tool.setuptools]
packages = ["stepup.reprep"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
